# unscramble

./: .gitignore  Cargo.toml  README.md  data_generator.py
datasets/: data_generator.py  fasttext_training.ipynb  filename_training_dataset.csv  filename_training_dataset_v2.csv  filename_training_preprocessed.txt
src/: cli.rs  main.rs  populate.rs  sort.rs  state.rs
